# libximc

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Jenkinsfile  Makefile.am  README  README.md  aminclude.am  autogen.sh  build-ci  build-ci.bat  build.bat  build.sh  clean_all.sh  configure.ac  libximc.sln  version  version.sh
c-profiles/miscellaneous/: 8H2028-050-4A.h  8MT173-112-MEn1.h  8MTV.h  DB28M01.h  DT4260-24-055-04.h  FL57STH76.h  ST5909L3008.h  ST5918L3008.h  ZSS32-200-06.h
c-profiles/standa/: 10MCWA168-1.h  10MCWA168-20.h  10MWA168-1.h  10MWA168-20.h  8-0143-AxisA-100.h  8-0143-AxisA-200.h  8-0143-AxisB-100.h  8-0143-AxisB-200.h  8CMA06-13_10.h  8CMA06-13_15.h  8CMA06-25_15.h  8CMA16DC-13_15.h  8CMA16DC-25_15.h  8CMA16DCV-13_15.h  8CMA16DCV-25_15.h  8CMA20-8_15.h  8CMA28-10.h  8MAV-8-BC.h  8MBM24-1-2.h  8MBM24-2-2.h  8MBM24-3-2.h  8MBM57-2.h  8MBM57-3.h  8MBM57-4.h  8MBM57-6.h  8MDS-120.h  8MDS-70.h  8MG00-50.h  8MG00-80.h  8MG00V-50.h  8MG00V-80.h  8MG99-50.h  8MG99-80.h  8MG99V-50.h  8MG99V-80.h  8MID12-1-AR.h  8MID12-1-H.h  8MID12-1-N.h  8MID14-1-AR.h  8MID14-1-N.h  (+289 more)
debian/: changelog  control  copyright  libximc7-dev.install  libximc7.dirs  libximc7.doc-base  libximc7.install  libximc7.lintian-overrides  libximc7.udev  rules  shlibs.libximc7
examples/firmwarer/: firmwarer.c  firmwarer.sln  firmwarer.vcxproj
examples/test_CSharp/: README.txt  test_CSharp.csproj  testapp.cs
examples/test_CodeBlocks/: README.txt  test_CodeBlocks.c  test_CodeBlocks.cbp
examples/test_Delphi/: README.txt  test_Delphi.dpr
examples/test_Java/: MANIFEST.MF  Makefile  README.txt
examples/test_LabWindows/: README.txt
examples/test_MATLAB/: README.txt  testximc.m
examples/test_Python/: Makefile
examples/test_VBNET/: README.txt  test_VBNET.vb  test_VBNET.vbproj
examples/testapp/: README.txt  testapp.c
examples/testapp_C/: Makefile.mingw  README.txt  testapp.c  testapp_C.c  testapp_C.cbp  testapp_C.sh  testapp_C.vcxproj
examples/testappeasy/: README.txt
examples/testappeasy_C/: README.txt  testappeasy_C.c  testappeasy_C.cbp  testappeasy_C.sh  testappeasy_C.vcxproj
examples/testcodeblocks/: README.txt
examples/testcprofile/: README.txt
examples/testcs/: README.txt  app.config
examples/testdelphi/: README.txt
examples/testhelper/: testhelper.c
examples/testjava/: README.txt
examples/testlabwindows/: README.txt
examples/testmatlab/: README.txt
examples/testport/: main.c
examples/testprofile_C/: 8MT173-25.h  README.txt  testprofile_C.sh  testprofile_C.vcxproj
examples/testpython/: Corr_table_example.tbl  Extendtestpython.py  Makefile  README_testpython.txt  README_testpythonprofile.txt  Readme_Extendtestpython.html  testpython.py  testpythonprofile.py
examples/testvbnet/: README.txt
libximc/: Info.plist  Makefile.am  Makefile.mingw  libximc.vcxproj  libximc.xcconfig  version.xcconfig
libximc/docs/: Makefile.am  builddocs.am
libximc/docs/doc-en/: Doxyfile.in  Makefile.am  docmainpage.c
libximc/docs/doc-ru/: Doxyfile.in  Makefile.am  docmainpage.c
libximc/libximc.xcodeproj/: project.pbxproj
libximc/src/: Makefile.am  Makefile.mingw  common.h  devenum.c  devvirt.c  fwprotocol-template.c  fwprotocol-template.h  libximc-template.def  libximc.rc  loader.c  loader.h  metadata.h  platform-posix.c  platform-win32.c  platform.h  protocol.xi  protosup.c  protosup.h  qtscript-template.c  tcp-posix.c  tcp-win.c  types.h  udp-posix.c  udp-win.c  udp-win.h  util.c  util.h  ximc-gen-template.c  ximc-gen-template.h  ximc-template.h  ximc-ut.c
m4/: ax_jni_include_dir.m4  ax_prog_cxx_for_build.m4
pypi/: README.md  config.ini
pypi/pypi_creator/: pypicreator.py  utils.py
pypi/scripts/: install.bat  install.sh  run.bat
python-profiles/STANDA/: 10MCWA168-1.py  10MCWA168-20.py  10MWA168-1.py  10MWA168-20.py  8-0032-MEn2.py  8-0143-AxisA-100.py  8-0143-AxisA-200.py  8-0143-AxisB-100.py  8-0143-AxisB-200.py  8CMA06-13_10.py  8CMA06-13_15.py  8CMA06-25_15.py  8CMA16DC-13_15.py  8CMA16DC-25_15.py  8CMA16DCV-13_15.py  8CMA16DCV-25_15.py  8CMA20-8_15.py  8CMA28-10.py  8CMA42-2-4247.py  8MAV-8-BC.py  8MBM24-1-2.py  8MBM24-2-2.py  8MBM24-3-2.py  8MBM57-2.py  8MBM57-3.py  8MBM57-4.py  8MBM57-6.py  8MDS-120.py  8MDS-70.py  8MFM-1.py  8MFM-2.py  8MG00-50.py  8MG00-80.py  (+342 more)
rpm/: libximc.spec
wrappers/: Makefile.am
wrappers/python/: Makefile.am  README.md  pyximc-template.py  readme.md
wrappers/python/pypi/: README.md  config.ini  run.py
wrappers/python/pypi/pypi_creator/: __init__.py  pypicreator.py  utils.py
wrappers/python/pypi/scripts/: run.sh
wrappers/python/pypi/templates/: LICENSE  __init__.py  pyproject.toml
xigen/: Makefile.am  xigen.vcxproj
xigen/src/: Makefile.am  basegenerator.hh  common.hh  csharpgenerator.hh  defgenerator.hh  driver.cc  driver.hh  fwheadergenerator.hh  fwlibgenerator.hh  fwprotocol-template.c  fwprotocol-template.h  generator.cc  generator.hh  generatorhelper.hh  headergenerator.hh  javagenerator.hh  jnigenerator.hh  libgenerator.hh  locale.cc  locale.hh  modegenerator.hh  model.hh  parser.yy  parsercontext.hh  pascalgenerator.hh  postprocess.hh  pythongenerator.hh  qsdefinegenerator.hh  qtscriptgenerator_comparison.hh  qtscriptgenerator_fromscript.hh  qtscriptgenerator_fromscript_calb.hh  qtscriptgenerator_getsetfunc.hh  qtscriptgenerator_getsethead.hh  qtscriptgenerator_highlights.hh  qtscriptgenerator_registermt.hh  qtscriptgenerator_toscript.hh  qtscriptgenerator_toscript_calb.hh  scanner.hh  scanner.ll  sizecheck.hh  (+3 more)
xigen/src/compat/: getopt.h
xigen/tests/: Makefile.am  code1x.expected  code1x.test  code2x.expected  code2x.test  code3.expected  code3.test  code3.xi  code5x.expected  code5x.test  consistent.test  def1x.expected  def1x.test  defs  doc1.expected  doc1.test  doc1.xi  example1.xi  example2.xi  example3.test  example3.xi  example4.xi  full.test  full.xi  fwheader4.expected  fwheader4.test  header1.expected  header1.test  header1.xi  header2.expected  header2.test  header2.xi  header3.expected  header3.xi  header4.expected  header4.xi  header5.expected  header5.test  header5.xi  header5cs.expected  (+18 more)
(+106 files in other folders)
